Adicionando mais estrófes

--- a/treinos/index.html
+++ b/treinos/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="poema">
             <div class="titulo-principal">
-                <h1 class="title">O Meu Brilho</h1>
+                <h1 class="title">Meu Brilho</h1>
             </div>
 
             <p class="sem-imagem">
@@ -20,7 +20,7 @@
                 Me diga, por que és rodeado de solidão?
             </p>
 
-            <div class="imagem">
+            <div class="imagem" id="img1">
                 <p class="box">
                     Tu que vagas por esta vastidão <br>
                     Brilhando na escuridão <br>
@@ -41,6 +41,22 @@
                 Que é rejeitado por todos <br>
                 Embora brilhe sem parar <br>
                 Me diga, por que simplesmente não matar?
+            </p>
+
+            <div class="imagem" id="img2">
+                <p class="box">
+                    Não entendo, não compreendo <br>
+                    Tenho vontade de gritar <br>
+                    Embora brilhe sem parar <br>
+                    Mesmo que abandonado está
+                </p>
+            </div>
+
+            <p class="sem-imagem">
+                Tentei brilhar, tentei correr <br>
+                Mas no primeiro erro, destinado fui a sofrer <br>
+                Fui embora mesmo querendo permanecer <br>
+                Quero morrer... 
             </p>
         </div>
     </div>
