--- a/treinos/index.html
+++ b/treinos/index.html
@@ -11,6 +11,7 @@
         <div class="poema">
             <div class="titulo-principal">
                 <h1 class="title">Meu Brilho</h1>
+                <div class="link">Poema de <a href="https://www.instagram.com/_pdanxz?igsh=MTN0ZDdyZGd5bWxhMg==">Paulo Daniel</a></div>
             </div>
 
             <p class="sem-imagem">
@@ -59,6 +60,10 @@
                 Quero morrer... 
             </p>
         </div>
+
+        <footer>
+            <p>Desenvolvido por Gabriel P.</p>
+        </footer>
     </div>
 </body>
 </html>
