atualização no footer

--- a/treinos/index.html
+++ b/treinos/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <footer>
-            <p>Desenvolvido por Gabriel P.</p>
+            <div class="rodape">Desenvolvido por <a href="https://www.instagram.com/gabb.zin_?igsh=dnA2ZnEwaGxhbmsz">Gabriel P.</a></div>
         </footer>
     </div>
 </body>
