--- a/treinos/index.html
+++ b/treinos/index.html
@@ -57,7 +57,53 @@
                 Tentei brilhar, tentei correr <br>
                 Mas no primeiro erro, destinado fui a sofrer <br>
                 Fui embora mesmo querendo permanecer <br>
-                Quero morrer... 
+                Quero morrer... <br>
+
+                <br>
+
+                Toda criatura tão fraca <br>
+                Oh! Pobre criança ingênua <br>
+                Frágil, de ti sinto pena <br>
+                Mesmo que mate... De alguma coisa adiantará
+            </p>
+
+            <div class="imagem" id="img3">
+                <p class="box">
+                    Rodeado de solidão, eu? <br>
+                    Eles temem meu poder <br>
+                    Embora necessitem do mesmo para viver <br>
+                    Diferente deles sozinho posso sobreviver
+                </p>
+            </div>
+
+            <p class="sem-imagem">
+                Compartiho minha luz pois sou bondoso de coração <br>
+                Pois todos são parte dessa dimensão <br>
+                Que graça teria, se à minha volta fosse vazia? <br>
+                Você também não faria? <br>
+
+                <br>
+
+                Jamais sombrio seria <br>
+                Meu brilho é único e sempre será <br>
+                Entre milhares de planetas, estrelas e cometas <br>
+                Eu nunca deixarei de brilhar
+            </p>
+
+            <div class="imagem" id="img4">
+                <p class="box">
+                    Diferente de ti, minha alegria não está em ser aceito <br>
+                    Minha alegria está em amar, está em viver <br>
+                    Viva intensamente pois nunca se sabe o amanhã <br>
+                    O choro dura uma noite, mas a alegria vem pela manhã
+                </p>
+            </div>
+
+            <p class="sem-imagem">
+                Estou aqui para te observar <br>
+                Ame e aprenda a se amar <br>
+                Porque um dia tudo desaparecerá <br>
+                Nunca deixe o seu brilho se apagar
             </p>
         </div>
 
